==> jpmoreto/play-with-robots/arduino/lib/SparkFun_MPU-9250_Breakout_Arduino_Library-master/src/MPU9250.cpp <==
#include "MPU9250.h"

void MPU9250::writeByte(uint8_t address, uint8_t subAddress, uint8_t data)
{
  Wire.beginTransmission(address);  // Initialize the Tx buffer
  Wire.write(subAddress);           // Put slave register address in Tx buffer
  Wire.write(data);                 // Put data in Tx buffer
  Wire.endTransmission();           // Send the Tx buffer
}

uint8_t MPU9250::readByte(uint8_t address, uint8_t subAddress)
{
  Wire.beginTransmission(address);  // Initialize the Tx buffer
  Wire.write(subAddress);           // Put slave register address in Tx buffer
  Wire.endTransmission(false);      // Send the Tx buffer, but send a restart
                                    // to keep connection alive
  Wire.requestFrom(address, (uint8_t) 1); // Read one byte from slave
                                          // register address
  // Fill Rx buffer with result; Return data read from slave register
  return Wire.read();
}
