==> Pinteessa/Pinteessa/empty_CC2650STK_TI/sensors/mpu9250.c <==
#include <inttypes.h>
#include <math.h>
#include <xdc/runtime/System.h>
#include <ti/sysbios/knl/Task.h>
#include <ti/drivers/I2C.h>
#include <ti/sysbios/knl/Clock.h>
#include "Board.h"
#include "mpu9250.h"
#define PI	3.14159265
#define XG_OFFSET_H      0x13  // User-defined trim values for gyroscope
#define XG_OFFSET_L      0x14
#define YG_OFFSET_H      0x15
#define YG_OFFSET_L      0x16
#define ZG_OFFSET_H      0x17
#define ZG_OFFSET_L      0x18
#define SMPLRT_DIV       0x19
#define CONFIG           0x1A
#define GYRO_CONFIG      0x1B
#define ACCEL_CONFIG     0x1C
#define ACCEL_CONFIG2    0x1D
#define FIFO_EN          0x23
#define I2C_MST_CTRL     0x24
#define INT_PIN_CFG      0x37
#define INT_ENABLE       0x38
#define ACCEL_XOUT_H     0x3B
#define GYRO_XOUT_H      0x43
#define USER_CTRL        0x6A  // Bit 7 enable DMP, bit 3 reset DMP
#define PWR_MGMT_1       0x6B // Device defaults to the SLEEP mode
#define PWR_MGMT_2       0x6C
#define FIFO_COUNTH      0x72
#define FIFO_COUNTL      0x73
#define FIFO_R_W         0x74
#define XA_OFFSET_H      0x77
#define YA_OFFSET_H      0x7A
#define ZA_OFFSET_H      0x7D
#define SELF_TEST_X_ACCEL 0x0D
#define SELF_TEST_Y_ACCEL 0x0E
#define SELF_TEST_Z_ACCEL 0x0F
#define SELF_TEST_X_GYRO 0x00
#define SELF_TEST_Y_GYRO 0x01
#define SELF_TEST_Z_GYRO 0x02
#define SELF_TEST_A      0x10
#define WHO_AM_I_MPU9250 0x75

void writeByte(uint8_t reg, uint8_t data) {

	I2C_Transaction i2cTransaction;
	uint8_t txBuffer[2];

	txBuffer[0] = reg;
	txBuffer[1] = data;
    i2cTransaction.slaveAddress = Board_MPU9250_ADDR;
    i2cTransaction.writeBuf = txBuffer;
    i2cTransaction.writeCount = 2;
    i2cTransaction.readBuf = NULL;
    i2cTransaction.readCount = 0;

    if (!I2C_transfer(i2c, &i2cTransaction)) {
    	System_printf("MPU9250: write=%x data=%x FAILED\n",reg,data);
    }
    System_flush();
}

void readByte(uint8_t reg, uint8_t count, uint8_t *data) {

	I2C_Transaction i2cTransaction;
	uint8_t txBuffer[1];

	txBuffer[0] = reg;
    i2cTransaction.slaveAddress = Board_MPU9250_ADDR;
    i2cTransaction.writeBuf = txBuffer;
    i2cTransaction.writeCount = 1;
    i2cTransaction.readBuf = data;
    i2cTransaction.readCount = count;

    if (!I2C_transfer(i2c, &i2cTransaction)) {
    	System_printf("MPU9250: read=%x count=%x FAILED\n",reg,count);
    }
    System_flush();
}
